[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Sasha Joseph <sasha.joseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
networkx = "^2.6.3"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
